--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
+    
     <script defer src="index.js"></script>
 </head>
 
@@ -9,8 +11,7 @@
     <h1 id="heading">Boredom ANNIHILATOR</h1>
     <div id="activity-container" class="">
         <div id="list-container" class=""></div>
-        <button id="random-button" class="">Click here to randomize</button>
-        <form id="list-name" class="">
+        <button class="btn btn-primary" id="random-button">Annihilate my Boredom!</button>        <form id="list-name" class="">
             <label><strong>Save list named: </strong></label>
             <input type="text" id="list-name-input" />
             <input type="submit" value="Submit" />
