added css to index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="CSS/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="CSS/styles.css">
     
     <script defer src="index.js"></script>
 </head>
 
 <body>
+    <div class="center">
     <h1 id="heading">Boredom ANNIHILATOR</h1>
     <div id="activity-container" class="">
         <div id="list-container" class=""></div>
@@ -35,6 +36,7 @@
 
 
     </div>
+</div>
 </body>
 
 </html>
