Added Emojis to buttons,  centered Annihilate my boredom  button under title

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 
 <body>
     <div class="center">
-    <h1 id="heading">Boredom ANNIHILATOR</h1>
+    <h1 id="heading">♥ ♥ ♥Boredom ANNIHILATOR♥ ♥ ♥</h1>
     <div id="activity-container" class="">
+        <div>
+            <button class="btn btn-primary" id="random-button">♥ ♥ ♥Annihilate my Boredom!♥ ♥ ♥</button>        
+        </div>
+        <br>
+        <br>
         <div id="list-container" class=""></div>
-        <button class="btn btn-primary" id="random-button">Annihilate my Boredom!</button>        <form id="list-name" class="">
+        <form id="list-name" class="">
             <label><strong>Save list named: </strong></label>
             <input type="text" id="list-name-input" />
             <input type="submit" value="Submit" />
