--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="CSS/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="CSS/styles.css">
     
     <script defer src="index.js"></script>
 </head>
