added images and css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <div class="center">
-    <h1 id="heading">Boredom ANNIHILATOR</h1>
+    <div class="center bgimg">
     <div id="activity-container" class="">
         <div id="list-container" class=""></div>
-        <button class="btn btn-primary" id="random-button">Annihilate my Boredom!</button>        <form id="list-name" class="">
+        <button class="btn btn-primary" id="random-button">Annihilate my Boredom!</button>
+            <form id="list-name" class="">
             <label><strong>Save list named: </strong></label>
             <input type="text" id="list-name-input" />
             <input type="submit" value="Submit" />
@@ -37,6 +37,18 @@
 
     </div>
 </div>
+
+<div id=parent>
+    <div id="narrow">
+        <img src="images/largedelete.jpg" >
+    </div>
+    <div id="wide">
+        <img src="images/largetype.jpg">
+
+    </div>
+    
+</div>
+
 </body>
 
 </html>
