--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div id=parent>
     <div id="narrow">
-        <img src="images/largesave.png"
+        <img src="images/largesave.png">
 
         <form id="list-name" class="">
             <label></label>
@@ -59,6 +59,20 @@
 
             </ul>
         </div>
+    </div>
+
+    <div id="completed-list-container">
+        <ul id="completed-list">
+
+        </ul>
+
+    </div>
+
+    <div id="saved-list-container">
+        <ul id="saved-lists">
+
+        </ul>
+
     </div>
     
 </div>
