--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="CSS/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="CSS/styles.css">
     <script defer src="index.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
 </head>
 <body>
     <div class="center bgimg">
