--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
 
     <div id="completed-list-container">
+        <h3>Completed Activities</h3>
         <ul id="completed-list">
 
         </ul>
@@ -69,6 +70,7 @@
     </div>
 
     <div id="saved-list-container">
+        <h3>Saved Lists and Activities</h3>
         <ul id="saved-lists">
 
         </ul>
